##Text encoding: utf-8

2008-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: enhance data loading [#24719] and always
	update the invert axis check box.
	* plugins/paint/bonds/bondtool.h: removed a commented out member.

2008-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: delete previous version when saving.
	* libs/gcu/object.cc: remove objects from dirty objects list when
	destroying.
	* plugins/paint/bonds/chaintool.cc: fixed when the chain starts from a
	new atom.
	* plugins/paint/cycles/cycletool.cc: reimplemented.
	* programs/crystal/document.cc: delete previous version when saving.

2008-11-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: prefer a cycle with cis configuration when drawing
	double bonds. [#24802]

2008-11-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/cycles/cycletool.cc: partially reimplemented.
	* plugins/paint/cycles/cycletool.h: ditto.

2008-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: don't allow bonds between molecules not
	in the same group.
	* plugins/paint/bonds/chaintool.cc: ditto.

2008-11-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/structs.h: add Point struct.
	* libs/gcp/view.cc: fixed objects remove.
	* plugins/paint/bonds/bondtool.cc: removed unused local variables.
	* plugins/paint/bonds/bondtool.h: remove a wrong declaration.
	* plugins/paint/bonds/chaintool.cc: reimplemented, and fixed undo
	and unallowed operations issues.
	* plugins/paint/bonds/chaintool.h: added gcpChainTool::Draw() method.

2008-11-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/item-client.h: enhance client retreival.
	* libs/gccv/item.cc: fixed a potential crasher/leak.
	* libs/gcp/view.cc: added View::SetSelectionState().
	* libs/gcp/view.h: ditto.
	* libs/gcp/widgetdata.cc: reimplemnted selection and object bounds.
	* plugins/paint/bonds/bondtool.cc: cleaned BondTool::OnDrag() and